objects/amazonconnect__AC_ContactChannelAnalytics__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transcripts</relationshipLabel>
        <relationshipName>Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Channel__c</fullName>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensAgentInterruptions__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Agent Interruptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensAgentSentiment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agent Sentiment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensCustomerInterruptions__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Customer Interruptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensCustomerSentimentCurve__c</fullName>
        <label>Customer Sentiment Curve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensCustomerSentiment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Sentiment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensInterruptions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interruptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensMatchedCategories__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <label>Matched Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensMatchedDetails__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Matched Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensNonTalkTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non Talk Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTalkSpeedAgent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agent Talk Speed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTalkSpeedCustomer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Talk Speed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTalkTimeAgent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agent Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTalkTimeCustomer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTalkTimeTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Talk Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ContactLensTranscriptsFullText__c</fullName>
        <label>Transcripts Full Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transcripts</relationshipLabel>
        <relationshipName>Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomerEndpointAddress__c</fullName>
        <label>Customer Endpoint Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DataSource__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact_Lens</fullName>
                    <label>Contact Lens</label>
                </value>
                <value>
                    <fullName>Transcribe_and_Comprehend</fullName>
                    <default>true</default>
                    <label>Transcribe and Comprehend</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__DominantLanguage__c</fullName>
        <label>Dominant Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Keywords__c</fullName>
        <label>Keywords</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__NamedEntities__c</fullName>
        <label>Named Entities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amazonconnect__RecordingPath__c</fullName>
        <externalId>true</externalId>
        <label>Recording Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Sentiment__c</fullName>
        <label>Sentiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__SfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AC Contact Channel Analytics</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amazonconnect__Contact_Lens</fullName>
        <columns>NAME</columns>
        <columns>amazonconnect__ContactLensCustomerSentiment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amazonconnect__DataSource__c</field>
            <operation>equals</operation>
            <value>Contact_Lens</value>
        </filters>
        <label>Contact Lens</label>
    </listViews>
    <listViews>
        <fullName>amazonconnect__Transcribe_and_Comprehend</fullName>
        <columns>NAME</columns>
        <columns>amazonconnect__Sentiment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amazonconnect__DataSource__c</field>
            <operation>equals</operation>
            <value>Transcribe_and_Comprehend</value>
        </filters>
        <label>Transcribe and Comprehend</label>
    </listViews>
    <nameField>
        <displayFormat>CCA {000000}</displayFormat>
        <label>Contact Channel Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Contact Channel Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>